force-app/main/default/objects/Book_MCC__c/Book_MCC__c.object-meta.xml
<CustomObject>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To store books related information.</description>
    <label>Book MCC</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books MCC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>