force-app/main/default/objects/Book_MCC__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: A lookup relationship to connect each book to the particular account(branch)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>