force-app/main/default/objects/Book_MCC__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To know the author of the book.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Author</label>
    <length>100</length>
    <type>Text</type>
</CustomField>