force-app/main/default/objects/Book_MCC__c/fields/Available_Books__c.field-meta.xml
<CustomField>
    <fullName>Available_Books__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To know how many books are still available for customers to reserve.</description>
    <formula>Quantity__c  -   Number_of_Books_Reserved__c</formula>
    <label>Available Books</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>