force-app/main/default/objects/Book_MCC__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autobiography</fullName>
            </value>
            <value>
                <fullName>Comic</fullName>
            </value>
            <value>
                <fullName>Cookbook</fullName>
            </value>
            <value>
                <fullName>Fiction</fullName>
            </value>
            <value>
                <fullName>Historical Fiction</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Mystery</fullName>
            </value>
            <value>
                <fullName>Novel</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Science Fiction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>