force-app/main/default/objects/Book_MCC__c/fields/Number_of_Books_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Books_Reserved__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (AlphaforceTeam)
Purpose: To check how many books are being reserved/borrowed by the customers.</description>
    <inlineHelpText>Leave blank. It will automatically get filled out.</inlineHelpText>
    <label>Number of Books Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>