force-app/main/default/objects/Book_MCC__c/listViews/Available_Books.listView-meta.xml
<ListView>
    <fullName>Available_Books</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Category__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Available Books</label>
</ListView>