force-app/main/default/objects/Book_MCC__c/listViews/Books_from_SF_Jose_Branch_Library.listView-meta.xml
<ListView>
    <fullName>Books_from_SF_Jose_Branch_Library</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Available_Books__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>SF Jose Branch Library</value>
    </filters>
    <label>Books from SF Jose Branch Library</label>
</ListView>