force-app/main/default/objects/Book_MCC__c/listViews/Unavailable_Books.listView-meta.xml
<ListView>
    <fullName>Unavailable_Books</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>Unavailable Books</label>
</ListView>